Update the gitignore and gitattributes.
The .gitattributes has been updaetd with the necessary settings so
that we colour things properly. The .gitignore settings have changed
to use the ** syntax which is more generally useful.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-*/aif/*
-*/aif32/*
-*/o/*
-*/o32/*
-*/oz/*
-*/oz32/*
-
+**/aif/*
+**/aif32/*
+**/o/*
+**/o32/*
+**/o32d/*
+**/od/*
+**/oz/*
+**/oz32/*
+**/oz32d/*
+**/ozd/*
