--- a/mks/MakefileROBuild,fe1
+++ b/mks/MakefileROBuild,fe1
@@ -23,14 +23,14 @@ TYPE       = aif
 #TARGET = <filename>
 
 # Comma-separated list of paths to use for includes, such as:
-#	<Lib$Dir>.LibName.
-INCLUDES   = <Lib$Dir>.THOLib.
+#	C:LibName.
+INCLUDES   = C:THOLib.
 
 # Space separated list of defines to set, eg -DDEBUG
 CDEFINES   =
 
 # Space separated list of libraries to link against.
-LIBS       = ${CLIB} <Lib$Dir>.THOLib.o.libTHOLib
+LIBS       = ${CLIB} C:THOLib.o.libTHOLib
 
 # Objects to build, using the format o.<name> (will be varied for build type)
 OBJS       = o.file_aff \
